--- a/find_friend/find_friend-server/pom.xml
+++ b/find_friend/find_friend-server/pom.xml
@@ -3,18 +3,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>org.example</groupId>
+        <groupId>com.findFriend</groupId>
         <artifactId>find_friend</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>find_friend-server</artifactId>
-
+    <version>0.0.1-SNAPSHOT</version>
+    <name>find_friend-server</name>
+    <description>find_friend-server</description>
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
     </properties>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
