--- a/find_friend/find_friend-server/src/main/resources/application.yml
+++ b/find_friend/find_friend-server/src/main/resources/application.yml
@@ -17,13 +17,21 @@ spring:
     baseline-on-migrate: true
     locations: classpath:db
 
-mybatis:
+
+mybatis-plus:
+  #mybatis配置文件
+  #config-location: classpath:mybatis-config.xml
   #mapper配置文件
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.sky.entity
-  configuration:
-    #开启驼峰命名
-    map-underscore-to-camel-case: true
+    mapper-locations: classpath*:/mapper/**/*Mapper.xml
+  #批量注册指定包下的类
+    type-aliases-package: com.findFriend.entity
+  #类属性与表字段的驼峰映射，mybatiplus默认true开启，mybatis需要手动配置，且config-location和configuration不能同时出现
+    configuration:
+      map-underscore-to-camel-case: true
+    global-config:
+      db-config:
+        id-type: assign_id
+        update-strategy: not_null
 
 logging:
   level:
@@ -45,10 +53,7 @@ findFriend:
     user-ttl: 7200000
     user-token-name: authentication
 
-  spring:
-    mvc:
-      pathmatch:
-        matching-strategy=ant-path-matcher
+
 
 
 
