--- a/find_friend/pom.xml
+++ b/find_friend/pom.xml
@@ -23,7 +23,7 @@
     </modules>
 
     <properties>
-        <mybatis.spring>2.2.0</mybatis.spring>
+        <mybatis.plus>3.5.5</mybatis.plus>
         <lombok>1.18.20</lombok>
         <fastjson>1.2.76</fastjson>
         <commons.lang>2.6</commons.lang>
@@ -39,10 +39,11 @@
 
     <dependencyManagement>
         <dependencies>
+
             <dependency>
-                <groupId>org.mybatis.spring.boot</groupId>
-                <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>${mybatis.spring}</version>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis.plus}</version>
             </dependency>
 
             <dependency>
