--- a/find_friend/find_friend-server/src/main/resources/application.yml
+++ b/find_friend/find_friend-server/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     druid:
       driver-class-name: ${findFriend.datasource.driver-class-name}
-      url: jdbc:mysql://${findFriend.datasource.host}:${findFriend.datasource.port}/${findFriend.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+      url: jdbc:mysql://${findFriend.datasource.host}:${findFriend.datasource.port}/${findFriend.datasource.database}
       username: ${findFriend.datasource.username}
       password: ${findFriend.datasource.password}
   flyway:
