--- a/find_friend/find_friend-common/pom.xml
+++ b/find_friend/find_friend-common/pom.xml
@@ -65,6 +65,10 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.15.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
     </dependencies>
 
 
