--- a/find_friend/find_friend-server/pom.xml
+++ b/find_friend/find_friend-server/pom.xml
@@ -75,10 +75,10 @@
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
-<!--        <dependency>
+        <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.aspectj</groupId>
